--- a/INSTALL
+++ b/INSTALL
@@ -4,6 +4,6 @@ See doc/readme-qt.rst for instructions on building Litecoin-QT,
 the intended-for-end-users, nice-graphical-interface, reference
 implementation of Litecoin.
 
-See doc/build-*.txt for instructions on building litecoind,
+See doc/build-*.txt for instructions on building blackcoind,
 the intended-for-services, no-graphical-interface, reference
 implementation of Litecoin.
