--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
-Building Litecoin
+Building Blackcoin
 
-See doc/readme-qt.rst for instructions on building Litecoin-QT,
+See doc/readme-qt.rst for instructions on building Blackcoin-QT,
 the intended-for-end-users, nice-graphical-interface, reference
-implementation of Litecoin.
+implementation of Blackcoin.
 
 See doc/build-*.txt for instructions on building blackcoind,
 the intended-for-services, no-graphical-interface, reference
-implementation of Litecoin.
+implementation of Blackcoin.
